--- a/.hintrc
+++ b/.hintrc
@@ -17,7 +17,8 @@
         "ignore": [
           "backdrop-filter",
           "overflow-clip-margin",
-          "-webkit-overflow-scrolling"
+          "-webkit-overflow-scrolling",
+          "min-width: fit-content"
         ]
       }
     ],
